force-app/main/default/objects/Account/fields/All_time_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>All_time_Account_Value__c</fullName>
    <description>Sum of all closed-won opportunities</description>
    <label>All time Account Value</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>