force-app/main/default/objects/Account/fields/Annual_Revenue_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Enriched__c</fullName>
    <description>Estimated annual revenue enriched from data provider</description>
    <inlineHelpText>Estimated annual revenue enriched from data provider</inlineHelpText>
    <label>Annual Revenue Enriched</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>