force-app/main/default/objects/Account/fields/Apollo_URL__c.field-meta.xml
<CustomField>
    <fullName>Apollo_URL__c</fullName>
    <description>One click link to the company info in Apollo</description>
    <inlineHelpText>One click link to the company info in Apollo</inlineHelpText>
    <label>Apollo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>