force-app/main/default/objects/Account/fields/Assignment_Rights__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rights__c</fullName>
    <label>Assignment Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>