force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City the account is located in</description>
    <inlineHelpText>City the account is located in</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>