force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Most Recent Contract End Date that has been Won</description>
    <inlineHelpText>Most Recent Contract End Date that has been Won</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>