force-app/main/default/objects/Account/fields/CS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CS manager that owns the post sale relationship with this account</description>
    <inlineHelpText>CS manager that owns the post sale relationship with this account</inlineHelpText>
    <label>CS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>