force-app/main/default/objects/Account/fields/CS_Tags__c.field-meta.xml
<CustomField>
    <fullName>CS_Tags__c</fullName>
    <description>Tags used by CS team to flag specific statuses requiring attention to this account</description>
    <inlineHelpText>Tags used by CS team to flag specific statuses requiring attention to this account</inlineHelpText>
    <label>CS Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>