force-app/main/default/objects/Account/fields/Customer_sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_sentiment__c</fullName>
    <description>Give a rating to the current customer sentiment in regards to ElevenLabs</description>
    <inlineHelpText>Give a rating to the current customer sentiment in regards to ElevenLabs</inlineHelpText>
    <label>Customer sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neutral Customer Sentiment</fullName>
            </value>
            <value>
                <fullName>Positive Customer Sentiment</fullName>
            </value>
            <value>
                <fullName>Negative Customer Sentiment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>