force-app/main/default/objects/Account/fields/Customer_Success_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Stage__c</fullName>
    <description>Current stage in their post-sale lifecycle.</description>
    <inlineHelpText>Current stage in their post-sale lifecycle.</inlineHelpText>
    <label>Customer Success Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Adopting</fullName>
            </value>
            <value>
                <fullName>Expanding</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>