force-app/main/default/objects/Account/fields/Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier__c</fullName>
    <description>The level of support the customer receives either due to customer characteristics or negotiated agreement:

1: Slack channel + CSM
2: CSM
3: General Support (default)</description>
    <inlineHelpText>The level of support the customer receives either due to customer characteristics or negotiated agreement:

1: Slack channel + CSM
2: CSM
3: General Support (default)</inlineHelpText>
    <label>Customer Success Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>