force-app/main/default/objects/Account/fields/Dispute_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolution__c</fullName>
    <description>Any non standard governing law or dispute resolution</description>
    <inlineHelpText>Any non standard governing law or dispute resolution</inlineHelpText>
    <label>Dispute Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>