force-app/main/default/objects/Account/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <label>Domains</label>
    <type>Url</type>
</CustomField>