force-app/main/default/objects/Account/fields/Estimated_Employees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Employees__c</fullName>
    <label>Estimated Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>