force-app/main/default/objects/Account/fields/Exclusivity_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Obligations__c</fullName>
    <description>Any exclusivity obligations we have with the account</description>
    <inlineHelpText>Any exclusivity obligations we have with the account</inlineHelpText>
    <label>Exclusivity Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>