force-app/main/default/objects/Account/fields/First_calendar_interaction__c.field-meta.xml
<CustomField>
    <fullName>First_calendar_interaction__c</fullName>
    <label>First calendar interaction</label>
    <type>Date</type>
</CustomField>