force-app/main/default/objects/Account/fields/First_contact_timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_contact_timestamp__c</fullName>
    <label>First contact timestamp</label>
    <type>DateTime</type>
</CustomField>