force-app/main/default/objects/Account/fields/First_interaction__c.field-meta.xml
<CustomField>
    <fullName>First_interaction__c</fullName>
    <label>First interaction</label>
    <type>Date</type>
</CustomField>