force-app/main/default/objects/Account/fields/Foundation_date__c.field-meta.xml
<CustomField>
    <fullName>Foundation_date__c</fullName>
    <label>Foundation date</label>
    <type>Date</type>
</CustomField>