force-app/main/default/objects/Account/fields/Funding_raised__c.field-meta.xml
<CustomField>
    <fullName>Funding_raised__c</fullName>
    <label>Funding raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>