force-app/main/default/objects/Account/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <description>Specific city of company headquarters</description>
    <inlineHelpText>Specific city of company headquarters</inlineHelpText>
    <label>Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>