force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Informs the health of the customer based on:
+ Customer Outcomes (70%)
 - Deployment (Onboarding completed) 20%
 - Engagement (Training completed) 10%
 - Adoption (Character usage) 45% 
 - Character usage 40%
 - User 5%
 - ROI captured (5%)
 - Expansions (20%)
+ Customer Experience (30%)
  - Overall Relationship Experience (NPS) 70%
  - Support Experience (CSAT) 20%
  - Sentiment (Subjective/Attio) 10%</description>
    <inlineHelpText>Informs the health of the customer based on:
+ Customer Outcomes (70%)
 - Deployment (Onboarding completed) 20%
 - Engagement (Training completed) 10%
 - Adoption (Character usage) 45% 
 - Character usage 40%
 - User 5%
 - ROI captured (5%)
 - Expansions (20%)
+ Customer Experience (30%)
  - Overall Relationship Experience (NPS) 70%
  - Support Experience (CSAT) 20%
  - Sentiment (Subjective/Attio) 10%</inlineHelpText>
    <label>Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>