force-app/main/default/objects/Account/fields/Industry_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Industry_Enriched__c</fullName>
    <description>Industry data pulled from data enrichment provider (Apollo, ZoomInfo, LinkedIn)</description>
    <inlineHelpText>Industry data pulled from data enrichment provider (Apollo, ZoomInfo, LinkedIn)</inlineHelpText>
    <label>Industry Enriched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>