force-app/main/default/objects/Account/fields/Keywords_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Keywords_Enriched__c</fullName>
    <description>Keywords enriched from Apollo or other info provider used to more specifically identify industry</description>
    <inlineHelpText>Keywords enriched from Apollo or other info provider used to more specifically identify industry</inlineHelpText>
    <label>Keywords Enriched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>