force-app/main/default/objects/Account/fields/Last_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Last_Enrichment__c</fullName>
    <description>Last time the data was enriched from Apollo or other service</description>
    <inlineHelpText>Last time the data was enriched from Apollo or other service</inlineHelpText>
    <label>Last Enrichment</label>
    <type>DateTime</type>
</CustomField>