force-app/main/default/objects/Account/fields/Last_interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_interaction__c</fullName>
    <label>Last interaction</label>
    <type>Date</type>
</CustomField>