force-app/main/default/objects/Account/fields/Lead_generation_channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_generation_channel__c</fullName>
    <description>Give information about the lead generation channel</description>
    <inlineHelpText>Give information about the lead generation channel</inlineHelpText>
    <label>Lead generation channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Marketing campaign</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Upselling</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Typeform</fullName>
            </value>
            <value>
                <fullName>Contact Sales Form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Discord</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>