force-app/main/default/objects/Account/fields/Lead_generation_method__c.field-meta.xml
<CustomField>
    <fullName>Lead_generation_method__c</fullName>
    <description>Select if it is an inbound or an outbound lead</description>
    <inlineHelpText>Select if it is an inbound or an outbound lead</inlineHelpText>
    <label>Lead generation method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>