force-app/main/default/objects/Account/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leads</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>