force-app/main/default/objects/Account/fields/Liability_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Liability_Provisions__c</fullName>
    <description>Any Non-standard reps/warranties/indemnities/liability caps</description>
    <inlineHelpText>Any Non-standard reps/warranties/indemnities/liability caps</inlineHelpText>
    <label>Liability Provisions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>