force-app/main/default/objects/Account/fields/Named_Account_List__c.field-meta.xml
<CustomField>
    <fullName>Named_Account_List__c</fullName>
    <description>If this is a named account, which list it belongs to</description>
    <inlineHelpText>If this is a named account, which list it belongs to</inlineHelpText>
    <label>Named Account List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>