force-app/main/default/objects/Account/fields/NDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed__c</fullName>
    <description>Whether we have signed an NDA with this account</description>
    <inlineHelpText>Whether we have signed an NDA with this account</inlineHelpText>
    <label>NDA Signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>