force-app/main/default/objects/Account/fields/NDA_URL__c.field-meta.xml
<CustomField>
    <fullName>NDA_URL__c</fullName>
    <description>Where the signed NDA is stored</description>
    <inlineHelpText>Where the signed NDA is stored</inlineHelpText>
    <label>NDA URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>