force-app/main/default/objects/Account/fields/Next_calendar_interaction__c.field-meta.xml
<CustomField>
    <fullName>Next_calendar_interaction__c</fullName>
    <label>Next calendar interaction</label>
    <type>Date</type>
</CustomField>