force-app/main/default/objects/Account/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Next steps and outstanding action items for this account</description>
    <inlineHelpText>Next steps and outstanding action items for this account</inlineHelpText>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>