force-app/main/default/objects/Account/fields/Non_solicits__c.field-meta.xml
<CustomField>
    <fullName>Non_solicits__c</fullName>
    <label>Non-solicits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>