force-app/main/default/objects/Account/fields/Notice_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Notice_Obligations__c</fullName>
    <description>Notice periods and notice obligations - e.g., autorenewal opt-outs, price increases upon renewal, data breach, etc.</description>
    <inlineHelpText>Notice periods and notice obligations - e.g., autorenewal opt-outs, price increases upon renewal, data breach, etc.</inlineHelpText>
    <label>Notice Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>