force-app/main/default/objects/Account/fields/NPS_link__c.field-meta.xml
<CustomField>
    <fullName>NPS_link__c</fullName>
    <description>This is used to track the NPS to a specific customer</description>
    <inlineHelpText>This is used to track the NPS to a specific customer</inlineHelpText>
    <label>NPS link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>