force-app/main/default/objects/Account/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deal records associated with a Company record</description>
    <inlineHelpText>Deal records associated with a Company record</inlineHelpText>
    <label>Opportunities</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>