force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Invoicing/payment terms - e.g., monthly/annually, and whether net 30, 45, 60, 90 days, etc.</description>
    <inlineHelpText>Invoicing/payment terms - e.g., monthly/annually, and whether net 30, 45, 60, 90 days, etc.</inlineHelpText>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>