force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographic region of the company, based on company&apos;s HQ or place of incorporation (subsidiary HQ if company is a subsidiary).</description>
    <inlineHelpText>Geographic region of the company, based on company&apos;s HQ or place of incorporation (subsidiary HQ if company is a subsidiary).</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>East Asia &amp; Pacific</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>India &amp; South Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>