force-app/main/default/objects/Account/fields/Security_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Security_Obligations__c</fullName>
    <description>Any non-standard security obligations</description>
    <inlineHelpText>Any non-standard security obligations</inlineHelpText>
    <label>Security Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>