force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Any Non-standard SLA terms</description>
    <inlineHelpText>Any Non-standard SLA terms</inlineHelpText>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>