force-app/main/default/objects/Account/fields/Strategic_client__c.field-meta.xml
<CustomField>
    <fullName>Strategic_client__c</fullName>
    <description>Select &quot;Yes&quot; if it has been approved as a strategic client</description>
    <inlineHelpText>Select &quot;Yes&quot; if it has been approved as a strategic client</inlineHelpText>
    <label>Strategic client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>