force-app/main/default/objects/Account/fields/Strategic_list__c.field-meta.xml
<CustomField>
    <fullName>Strategic_list__c</fullName>
    <label>Strategic list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fortune 1000 US</fullName>
            </value>
            <value>
                <fullName>Euronext composite</fullName>
            </value>
            <value>
                <fullName>Global 500</fullName>
            </value>
            <value>
                <fullName>NYSE</fullName>
            </value>
            <value>
                <fullName>Fortune 500 Europe</fullName>
            </value>
            <value>
                <fullName>Nasdaq</fullName>
            </value>
            <value>
                <fullName>S&amp;P 500 composite</fullName>
            </value>
            <value>
                <fullName>Fortune 500 US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>