force-app/main/default/objects/Account/fields/Strategic_Nature__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Nature__c</fullName>
    <description>Why is this a strategic account</description>
    <inlineHelpText>Why is this a strategic account</inlineHelpText>
    <label>Strategic Nature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2024 Hitlist</fullName>
            </value>
            <value>
                <fullName>AI Native</fullName>
            </value>
            <value>
                <fullName>Brand Partnership</fullName>
            </value>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>