force-app/main/default/objects/Account/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Current summary of the relationship with this customer</description>
    <inlineHelpText>Current summary of the relationship with this customer</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>