force-app/main/default/objects/Account/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <description>Any non-standard termination rights - e.g., termination for convenience</description>
    <inlineHelpText>Any non-standard termination rights - e.g., termination for convenience</inlineHelpText>
    <label>Termination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>