force-app/main/default/objects/Account/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <description>Sum/roll up of all active won opportunities related to this account</description>
    <inlineHelpText>Sum/roll up of all active won opportunities related to this account</inlineHelpText>
    <label>Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>