force-app/main/default/objects/Account/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>State the email address used for upgrading this account</description>
    <inlineHelpText>State the email address used for upgrading this account</inlineHelpText>
    <label>Username</label>
    <type>Email</type>
</CustomField>