force-app/main/default/objects/Account/fields/Workspaces__c.field-meta.xml
<CustomField>
    <fullName>Workspaces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workspaces</label>
    <referenceTo>Workspace__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>